# testcrewai

./: .gitignore  README.md  pyproject.toml  report.md
historias_exito/: .env.example  .gitignore  README.md  pyproject.toml
historias_exito/src/historias_exito/: config.py  main.py
historias_exito/src/historias_exito/crews/busca_historias/: README.md  pyproject.toml
historias_exito/src/historias_exito/crews/busca_historias/src/busca_historias/: crew.py  main.py
historias_exito/src/historias_exito/crews/busca_historias/src/busca_historias/config/: agents.yaml  tasks.yaml
historias_exito/src/historias_exito/crews/buscador/: README.md  pyproject.toml
historias_exito/src/historias_exito/crews/buscador/src/buscador/: crew.py  main.py
historias_exito/src/historias_exito/crews/research_crew/: research_crew.py
historias_exito/src/historias_exito/crews/research_crew/config/: agents.yaml  tasks.yaml
src/testcrew/: crew.py  main.py
src/testcrew/config/: tasks.yaml
successFlow/: README.md  pyproject.toml  success_stories.json
successFlow/src/historias_exito/crews/research_crew/: research_crew.py
successFlow/src/historias_exito/crews/research_crew/config/: agents.yaml
successFlow/src/successFlow/: config.py  main.py
successFlow/src/successFlow/crews/research_crew/: research_crew.py
successFlow/src/successFlow/crews/research_crew/config/: agents.yaml  tasks.yaml
successFlow/src/successFlow/crews/validation_crew/: validation_crew.py
successFlow/src/successFlow/crews/validation_crew/config/: agents.yaml  tasks.yaml
