[project]
name = "successFlow"
version = "0.1.0"
description = "successFlow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.79.4,<1.0.0",
    "langtrace-python-sdk>=3.3.7",
]

[project.scripts]
kickoff = "successFlow.main:kickoff"
plot = "successFlow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
