[project]
name = "buscador"
version = "0.1.0"
description = "buscador using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.79.4,<1.0.0"
]

[project.scripts]
buscador = "buscador.main:run"
run_crew = "buscador.main:run"
train = "buscador.main:train"
replay = "buscador.main:replay"
test = "buscador.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
